# NT219_PostQuantumn_Blockchain

./: .gitignore
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.js
infrastructure/Besu-hyperledger/: TLS_SETUP_SUMMARY.md  docker-compose.proxy.yml  docker-compose.yml  package-lock.json
infrastructure/Besu-hyperledger/config/besu/: config.toml  genesis.json
infrastructure/Besu-hyperledger/config/prometheus/: prometheus.yml
infrastructure/Besu-hyperledger/extra/: package-lock.json
infrastructure/Besu-hyperledger/metricbeat/: metricbeat.yml
infrastructure/Besu-hyperledger/quorum-explorer/: config.json
infrastructure/Besu-hyperledger/reverse-proxy/: nginx.conf
infrastructure/Besu-hyperledger/scripts/: generate_node_configs.sh  generate_tls13_certs.sh  test_ksm.sh  test_tls.sh  update_docker_compose_tls.sh
infrastructure/Besu-hyperledger/smart_contracts/: DEPLOY_WITH_TLS.md  package-lock.json  package.json
infrastructure/Besu-hyperledger/smart_contracts/contracts/: BalanceVerifier.json  (+16 more)
infrastructure/contracts/: CoreLedger.sol
infrastructure/ksm/: .dockerignore  Dockerfile  README.md  build.sh  pom.xml
infrastructure/prover/: Cargo.toml  README.md
infrastructure/prover/src/: lib.rs  main.rs
infrastructure/prover/src/api/: mod.rs
infrastructure/prover/src/balance_proof/: mod.rs
infrastructure/smart-contract/: hardhat.config.ts  package-lock.json  package.json
infrastructure/smart-contract/scripts/: deploy.js  interact.js
ksm_server/: main.py
zkp_prover/: Cargo.toml
zkp_prover/src/: main.rs
(+87 files in other folders)
