[package]
name = "zkp-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
# Winterfell - STARK prover library
winterfell = "0.9"

# Math operations
crypto-bigint = "0.5"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing
sha3 = "0.10"

# Web server for API
actix-web = "4"
actix-rt = "2"

# Logging
env_logger = "0.11"
log = "0.4"

# Async
tokio = { version = "1", features = ["full"] }

# Time utilities
chrono = "0.4"

# Caching
once_cell = "1.19"

# CPU detection
num_cpus = "1.16"

# HTTP/2 support
h2 = "0.3"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

